Fix index Add To Cart, add Search function

--- a/cart.html
+++ b/cart.html
@@ -201,8 +201,8 @@
                 Tìm kiếm
               </a>
               <div class="dropdown-menu dropdown-menu-right bg-light p-2 border-0" aria-labelledby="searchbox-dropdown">
-                <form action="#" class="form-inline dropdown-item">
-                  <input class="form-control mr-sm-2" type="search" placeholder="Tìm kiếm..." aria-label="Search" />
+                <form action="shop.html" class="form-inline dropdown-item" method="GET">
+                  <input name="q" class="form-control mr-sm-2" type="search" placeholder="Tìm kiếm..." aria-label="Search" />
                   <button type="submit" class="btn-success" style="line-height: 0">
                     <span class=" fa fa-search"></span>
                   </button>
@@ -236,8 +236,8 @@
         <div class="col-md-4">
           <div class="single-sidebar">
             <h2 class="sidebar-title">Tìm kiếm sản phẩm</h2>
-            <form action="">
-              <input type="text" placeholder="Tìm kiếm sản phẩm...">
+            <form action="shop.html" method="GET">
+              <input name="q" type="text" placeholder="Tìm kiếm sản phẩm...">
               <input type="submit" value="Tìm kiếm">
             </form>
           </div>
