--- a/checkout.html
+++ b/checkout.html
@@ -202,8 +202,8 @@
                 Tìm kiếm
               </a>
               <div class="dropdown-menu dropdown-menu-right bg-light p-2 border-0" aria-labelledby="searchbox-dropdown">
-                <form action="#" class="form-inline dropdown-item">
-                  <input class="form-control mr-sm-2" type="search" placeholder="Tìm kiếm..." aria-label="Search" />
+                <form action="shop.html" class="form-inline dropdown-item" method="GET">
+                  <input name="q" class="form-control mr-sm-2" type="search" placeholder="Tìm kiếm..." aria-label="Search" />
                   <button type="submit" class="btn-success" style="line-height: 0">
                     <span class=" fa fa-search"></span>
                   </button>
