--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
                 Tìm kiếm
               </a>
               <div class="dropdown-menu dropdown-menu-right bg-light p-2 border-0" aria-labelledby="searchbox-dropdown">
-                <form action="#" class="form-inline dropdown-item">
-                  <input class="form-control mr-sm-2" type="search" placeholder="Tìm kiếm..." aria-label="Search" />
+                <form action="shop.html" class="form-inline dropdown-item" method="GET">
+                  <input name="q" class="form-control mr-sm-2" type="search" placeholder="Tìm kiếm..." aria-label="Search" />
                   <button type="submit" class="btn-success" style="line-height: 0">
                     <span class=" fa fa-search"></span>
                   </button>
@@ -316,10 +316,10 @@
                 <div class="product-f-image">
                   <img src="images/small/img2.jpg" alt="" style="width: 205px; height: 257px;" />
                   <div class="product-hover">
-                    <a href="cart.html" class="add-to-cart-link">
+                    <a href="javascript:addToCart(2)" class="add-to-cart-link" draggable="false">
                       <i class="fa fa-shopping-cart"></i> Mua hàng
                     </a>
-                    <a href="single-product.html" class="view-details-link">
+                    <a href="single-product.html?id=2" class="view-details-link" draggable="false">
                       <i class="fa fa-link"></i> Xem chi tiết
                     </a>
                   </div>
@@ -335,14 +335,14 @@
               </div>
 
 
-              <div class="single-product" ondragstart="itemDrag(event)" draggable="true" data-itemid="2">
+              <div class="single-product" ondragstart="itemDrag(event)" draggable="true" data-itemid="6">
                 <div class="product-f-image">
                   <img src="images/small/img6.jpg" alt="" style="width: 205px; height: 257px;" />
                   <div class="product-hover">
-                    <a href="cart.html" class="add-to-cart-link">
+                    <a href="javascript:addToCart(6)" class="add-to-cart-link" draggable="false">
                       <i class="fa fa-shopping-cart"></i> Mua hàng
                     </a>
-                    <a href="single-product.html" class="view-details-link">
+                    <a href="single-product.html?id=6" class="view-details-link" draggable="false">
                       <i class="fa fa-link"></i> Xem chi tiết
                     </a>
                   </div>
@@ -358,14 +358,14 @@
               </div>
 
 
-              <div class="single-product" ondragstart="itemDrag(event)" draggable="true" data-itemid="2">
+              <div class="single-product" ondragstart="itemDrag(event)" draggable="true" data-itemid="10">
                 <div class="product-f-image">
                   <img src="images/small/img10.jpg" alt="" style="width: 205px; height: 257px;" />
                   <div class="product-hover">
-                    <a href="cart.html" class="add-to-cart-link">
+                    <a href="javascript:addToCart(10)" class="add-to-cart-link" draggable="false">
                       <i class="fa fa-shopping-cart"></i> Mua hàng
                     </a>
-                    <a href="single-product.html" class="view-details-link">
+                    <a href="single-product.html?id=10" class="view-details-link" draggable="false">
                       <i class="fa fa-link"></i> Xem chi tiết
                     </a>
                   </div>
@@ -381,14 +381,14 @@
               </div>
 
 
-              <div class="single-product" ondragstart="itemDrag(event)" draggable="true" data-itemid="2">
+              <div class="single-product" ondragstart="itemDrag(event)" draggable="true" data-itemid="9">
                 <div class="product-f-image">
                   <img src="images/small/img9.jpg" alt="" style="width: 205px; height: 257px;" />
                   <div class="product-hover">
-                    <a href="cart.html" class="add-to-cart-link">
+                    <a href="javascript:addToCart(9)" class="add-to-cart-link" draggable="false">
                       <i class="fa fa-shopping-cart"></i> Mua hàng
                     </a>
-                    <a href="single-product.html" class="view-details-link">
+                    <a href="single-product.html?id=9" class="view-details-link" draggable="false">
                       <i class="fa fa-link"></i> Xem chi tiết
                     </a>
                   </div>
@@ -404,14 +404,14 @@
               </div>
 
 
-              <div class="single-product" ondragstart="itemDrag(event)" draggable="true" data-itemid="2">
+              <div class="single-product" ondragstart="itemDrag(event)" draggable="true" data-itemid="15">
                 <div class="product-f-image">
                   <img src="images/large/img15.jpg" alt="" style="width: 205px; height: 257px;" />
                   <div class="product-hover">
-                    <a href="cart.html" class="add-to-cart-link">
+                    <a href="javascript:addToCart(15)" class="add-to-cart-link" draggable="false">
                       <i class="fa fa-shopping-cart"></i> Mua hàng
                     </a>
-                    <a href="single-product.html" class="view-details-link">
+                    <a href="single-product.html?id=15" class="view-details-link" draggable="false">
                       <i class="fa fa-link"></i> Xem chi tiết
                     </a>
                   </div>
@@ -427,14 +427,14 @@
               </div>
 
 
-              <div class="single-product" ondragstart="itemDrag(event)" draggable="true" data-itemid="2">
+              <div class="single-product" ondragstart="itemDrag(event)" draggable="true" data-itemid="22">
                 <div class="product-f-image">
                   <img src="images/large/img22.jpg" alt="" style="width: 205px; height: 257px;" />
                   <div class="product-hover">
-                    <a href="cart.html" class="add-to-cart-link">
+                    <a href="javascript:addToCart(22)" class="add-to-cart-link" draggable="false">
                       <i class="fa fa-shopping-cart"></i> Mua hàng
                     </a>
-                    <a href="single-product.html" class="view-details-link">
+                    <a href="single-product.html?id=22" class="view-details-link" draggable="false">
                       <i class="fa fa-link"></i> Xem chi tiết
                     </a>
                   </div>
@@ -450,14 +450,14 @@
               </div>
 
 
-              <div class="single-product" ondragstart="itemDrag(event)" draggable="true" data-itemid="2">
+              <div class="single-product" ondragstart="itemDrag(event)" draggable="true" data-itemid="17">
                 <div class="product-f-image">
                   <img src="images/large/img17.jpg" alt="" style="width: 205px; height: 257px;" />
                   <div class="product-hover">
-                    <a href="cart.html" class="add-to-cart-link">
+                    <a href="javascript:addToCart(17)" class="add-to-cart-link" draggable="false">
                       <i class="fa fa-shopping-cart"></i> Mua hàng
                     </a>
-                    <a href="single-product.html" class="view-details-link">
+                    <a href="single-product.html?id=17" class="view-details-link" draggable="false">
                       <i class="fa fa-link"></i> Xem chi tiết
                     </a>
                   </div>
@@ -473,14 +473,14 @@
               </div>
 
 
-              <div class="single-product" ondragstart="itemDrag(event)" draggable="true" data-itemid="2">
+              <div class="single-product" ondragstart="itemDrag(event)" draggable="true" data-itemid="23">
                 <div class="product-f-image">
                   <img src="images/pokemon/img31.jpg" alt="" style="width: 205px; height: 257px;" />
                   <div class="product-hover">
-                    <a href="cart.html" class="add-to-cart-link">
+                    <a href="javascript:addToCart(23)" class="add-to-cart-link" draggable="false">
                       <i class="fa fa-shopping-cart"></i> Mua hàng
                     </a>
-                    <a href="single-product.html" class="view-details-link">
+                    <a href="single-product.html?id=23" class="view-details-link" draggable="false">
                       <i class="fa fa-link"></i> Xem chi tiết
                     </a>
                   </div>
@@ -496,14 +496,14 @@
               </div>
 
 
-              <div class="single-product" ondragstart="itemDrag(event)" draggable="true" data-itemid="2">
+              <div class="single-product" ondragstart="itemDrag(event)" draggable="true" data-itemid="54">
                 <div class="product-f-image">
                   <img src="images/pokemon/img61.jpg" alt="" style="width: 205px; height: 257px;" />
                   <div class="product-hover">
-                    <a href="cart.html" class="add-to-cart-link">
+                    <a href="javascript:addToCart(54)" class="add-to-cart-link" draggable="false">
                       <i class="fa fa-shopping-cart"></i> Mua hàng
                     </a>
-                    <a href="single-product.html" class="view-details-link">
+                    <a href="single-product.html?id=54" class="view-details-link" draggable="false">
                       <i class="fa fa-link"></i> Xem chi tiết
                     </a>
                   </div>
@@ -519,14 +519,14 @@
               </div>
 
 
-              <div class="single-product" ondragstart="itemDrag(event)" draggable="true" data-itemid="2">
+              <div class="single-product" ondragstart="itemDrag(event)" draggable="true" data-itemid="55">
                 <div class="product-f-image">
                   <img src="images/pokemon/img62.jpg" alt="" style="width: 205px; height: 257px;" />
                   <div class="product-hover">
-                    <a href="cart.html" class="add-to-cart-link">
+                    <a href="javascript:addToCart(55)" class="add-to-cart-link" draggable="false">
                       <i class="fa fa-shopping-cart"></i> Mua hàng
                     </a>
-                    <a href="single-product.html" class="view-details-link">
+                    <a href="single-product.html?id=55" class="view-details-link" draggable="false">
                       <i class="fa fa-link"></i> Xem chi tiết
                     </a>
                   </div>
@@ -582,11 +582,11 @@
             <h2 class="product-wid-title">Đang Giảm Giá</h2>
             <a href="shop.html" class="wid-view-more">Xem tất cả</a>
 
-            <div class="single-wid-product">
-              <a href="single-product.html?id=10">
+            <div class="single-wid-product" draggable="true" ondragstart="itemDrag(event)" data-itemid="10">
+              <a href="single-product.html?id=10" draggable="false">
                 <img src="images/small/img10.jpg" alt="" class="product-thumb" />
+                <h2>Gấu bông cặp VIOLET-PINK</h2>
               </a>
-              <h2><a href="single-product.html?id=10">Gấu bông cặp VIOLET-PINK</a></h2>
               <div class="product-wid-rating">
                 <i class="fa fa-star"></i>
                 <i class="fa fa-star"></i>
@@ -600,9 +600,11 @@
             </div>
 
 
-            <div class="single-wid-product">
-              <a href="single-product.html?id=17"><img src="images/large/img17.jpg" alt="" class="product-thumb" /></a>
-              <h2><a href="single-product.html?id=17">Gấu bông to loại 1</a></h2>
+            <div class="single-wid-product" draggable="true" ondragstart="itemDrag(event)" data-itemid="17">
+              <a href="single-product.html?id=17" draggable="false">
+                <img src="images/large/img17.jpg" alt="" class="product-thumb" />
+                <h2>Gấu bông to loại 1</h2>
+              </a>
               <div class="product-wid-rating">
                 <i class="fa fa-star"></i> <i class="fa fa-star"></i>
                 <i class="fa fa-star"></i> <i class="fa fa-star"></i>
@@ -614,9 +616,11 @@
             </div>
 
 
-            <div class="single-wid-product">
-              <a href="single-product.html?id=22"><img src="images/large/img22.jpg" alt="" class="product-thumb" /></a>
-              <h2><a href="single-product.html?id=22">Bộ Husky Nga</a></h2>
+            <div class="single-wid-product" draggable="true" ondragstart="itemDrag(event)" data-itemid="22">
+              <a href="single-product.html?id=22" draggable="false">
+                <img src="images/large/img22.jpg" alt="" class="product-thumb" />
+                <h2>Bộ Husky Nga</h2>
+              </a>
               <div class="product-wid-rating">
                 <i class="fa fa-star"></i> <i class="fa fa-star"></i>
                 <i class="fa fa-star"></i> <i class="fa fa-star"></i>
@@ -636,11 +640,11 @@
             <h2 class="product-wid-title">Được xem nhiều</h2>
             <a href="shop.html" class="wid-view-more">Xem tất cả</a>
 
-            <div class="single-wid-product">
-              <a href="single-product.html?id=6">
+            <div class="single-wid-product" draggable="true" ondragstart="itemDrag(event)" data-itemid="6">
+              <a href="single-product.html?id=6" draggable="false">
                 <img src="images/small/img6.jpg" alt="" class="product-thumb">
+                <h2>Gấu bông nhỏ loại 1</h2>
               </a>
-              <h2><a href="single-product.html?id=6">Gấu bông nhỏ loại 1</a></h2>
               <div class="product-wid-rating">
                 <i class="fa fa-star"></i> <i class="fa fa-star"></i>
                 <i class="fa fa-star"></i> <i class="fa fa-star"></i>
@@ -652,9 +656,11 @@
             </div>
 
 
-            <div class="single-wid-product">
-              <a href="single-product.html?id=20"><img src="images/large/img20.jpg" alt="" class="product-thumb" /></a>
-              <h2><a href="single-product.html?id=20">Gấu bông to VIOLET</a></h2>
+            <div class="single-wid-product" draggable="true" ondragstart="itemDrag(event)" data-itemid="20">
+              <a href="single-product.html?id=20" draggable="false">
+                <img src="images/large/img20.jpg" alt="" class="product-thumb" />
+                <h2>Gấu bông to VIOLET</h2>
+              </a>
               <div class="product-wid-rating">
                 <i class="fa fa-star"></i> <i class="fa fa-star"></i>
                 <i class="fa fa-star"></i> <i class="fa fa-star"></i>
@@ -666,9 +672,11 @@
             </div>
 
 
-            <div class="single-wid-product">
-              <a href="single-product.html?id=15"><img src="images/large/img15.jpg" alt="" class="product-thumb" /></a>
-              <h2><a href="single-product.html?id=15">Bộ Totoro</a></h2>
+            <div class="single-wid-product" draggable="true" ondragstart="itemDrag(event)" data-itemid="15">
+              <a href="single-product.html?id=15" draggable="false">
+                <img src="images/large/img15.jpg" alt="" class="product-thumb" />
+                <h2>Bộ Totoro</h2>
+              </a>
               <div class="product-wid-rating">
                 <i class="fa fa-star"></i> <i class="fa fa-star"></i>
                 <i class="fa fa-star"></i> <i class="fa fa-star"></i>
@@ -688,9 +696,11 @@
             <h2 class="product-wid-title">Mới nhất</h2>
             <a href="shop.html" class="wid-view-more">Xem tất cả</a>
 
-            <div class="single-wid-product">
-              <a href="single-product.html?id=55"><img src="images/pokemon/img62.jpg" alt="" class="product-thumb" /></a>
-              <h2><a href="single-product.html?id=55">Bộ Eevee tiến hóa</a></h2>
+            <div class="single-wid-product" draggable="true" ondragstart="itemDrag(event)" data-itemid="55">
+              <a href="single-product.html?id=55" draggable="false">
+                <img src="images/pokemon/img62.jpg" alt="" class="product-thumb" a>
+                <h2>Bộ Eevee tiến hóa</h2>
+              </a>
               <div class="product-wid-rating">
                 <i class="fa fa-star"></i> <i class="fa fa-star"></i>
                 <i class="fa fa-star"></i> <i class="fa fa-star"></i>
@@ -702,9 +712,11 @@
             </div>
 
 
-            <div class="single-wid-product">
-              <a href="single-product.html?id=54"><img src="images/pokemon/img61.jpg" alt="" class="product-thumb" /></a>
-              <h2><a href="single-product.html?id=54">Bộ POKEMON tân binh</a></h2>
+            <div class="single-wid-product" draggable="true" ondragstart="itemDrag(event)" data-itemid="54">
+              <a href="single-product.html?id=54" draggable="false">
+                <img src="images/pokemon/img61.jpg" alt="" class="product-thumb">
+                <h2>POKEMON tân binh</h2>
+              </a>
               <div class="product-wid-rating">
                 <i class="fa fa-star"></i> <i class="fa fa-star"></i>
                 <i class="fa fa-star"></i> <i class="fa fa-star"></i>
@@ -716,9 +728,11 @@
             </div>
 
 
-            <div class="single-wid-product">
-              <a href="single-product.html?id=23"><img src="images/pokemon/img31.jpg" alt="" class="product-thumb" /></a>
-              <h2><a href="single-product.html?id=23">Pikachu</a></h2>
+            <div class="single-wid-product" draggable="true" ondragstart="itemDrag(event)" data-itemid="23">
+              <a href="single-product.html?id=23" draggable="false">
+                <img src="images/pokemon/img31.jpg" alt="" class="product-thumb" a>
+                <h2>Pikachu</h2>
+              </a>
               <div class="product-wid-rating">
                 <i class="fa fa-star"></i> <i class="fa fa-star"></i>
                 <i class="fa fa-star"></i> <i class="fa fa-star"></i>
@@ -883,7 +897,7 @@
           </div>
         </div>
         <div class="modal-footer">
-          <span style="margin: 0 auto;font-size: 13px; color: #8f8686;">Bông Xù Store ; 2018</span>
+          <span style="margin: 0 auto;font-size: 13px; color: #8f8686;">Bông Xù Store &copy; 2018</span>
         </div>
       </div>
     </div>
