--- a/cart.html
+++ b/cart.html
@@ -233,7 +233,7 @@
     <div class="zigzag-bottom"></div>
     <div class="container">
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-lg-4">
           <div class="single-sidebar">
             <h2 class="sidebar-title">Tìm kiếm sản phẩm</h2>
             <form action="shop.html" method="GET">
@@ -257,7 +257,7 @@
           </div>
         </div>
 
-        <div class="col-md-8">
+        <div class="col-lg-8">
           <div class="product-content-right">
             <div class="woocommerce">
               <form method="post" action="#">
